Fix awkward spacing between background color, text

--- a/styles/index.css
+++ b/styles/index.css
@@ -70,8 +70,11 @@ main h1 {
     background-color: rgb(227, 47, 47);
     color: white;
     padding: 8px;
-    margin-top: 2px;
+    margin-top: 3px;
+    margin-left: auto;
+    margin-right: auto;
     border-radius: 10px;
+    max-width: 70%;
     font-size: 1.1em;
 }
 
